--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ pages:
   script:
     - mkdir .public
     - cp -r * .public
-    - mv .public/html/* .public
+    - mv .public/html/index.html .public
     - rm -rf public
     - mv .public public
   artifacts:
